fix: adjusted grid alignments

--- a/sass/layout/_contact-us.scss
+++ b/sass/layout/_contact-us.scss
@@ -17,16 +17,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 80%;
+    width: 75%;
     min-width: 900px;
     margin: 0 auto;
 }
 
 .vesta-contact-info{
     text-align: center;
-    display: grid;
+    display: inline-grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: auto;
+    align-items: center;
+    grid-gap: 20px;
     height: 325px;
     width: 315px;
 
@@ -44,16 +46,16 @@
     }
 
     p{
-        padding-top: 8px;
         text-align: left;
+        height: 100%;
     }
 }
 
 .widget_media_image{
-    width: 40px;
+    width: 45px;
     .image{
         width: 100%;
-        height: 40px;
+        height: 45px;
     }
 }
 
