--- a/style.css
+++ b/style.css
@@ -462,15 +462,19 @@ div.wpcf7-mail-sent-ok {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  width: 80%;
+  width: 75%;
   min-width: 900px;
   margin: 0 auto; }
 
 .vesta-contact-info {
   text-align: center;
-  display: grid;
+  display: inline-grid;
   grid-template-columns: 20% 80%;
   grid-template-rows: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 20px;
   height: 325px;
   width: 315px; }
   .vesta-contact-info h3 {
@@ -483,14 +487,14 @@ div.wpcf7-mail-sent-ok {
     font-size: 1.35em;
     text-transform: capitalize; }
   .vesta-contact-info p {
-    padding-top: 8px;
-    text-align: left; }
+    text-align: left;
+    height: 100%; }
 
 .widget_media_image {
-  width: 40px; }
+  width: 45px; }
   .widget_media_image .image {
     width: 100%;
-    height: 40px; }
+    height: 45px; }
 
 #text-2 {
   grid-column: 1/3; }
